<resources>
    <string name="app_name" translatable="false">Notes</string>
    <string name="enterPinTxt">Enter your password:</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="clear_u2190" translatable="false">←</string>
    <string name="toastPasswordSaved">Password saved!</string>
    <string name="toastPasswordIncorrect">Incorrect password!</string>

    <string name="settings">Settings</string>
    <string name="safety">Safety</string>
    <string name="changePassword">Change password</string>
    <string name="newPinTxt">New password:</string>
    <string name="fourDigits">(must consist of 4 digits)</string>
    <string name="save">Save</string>
    <string name="toastEnterPin">Enter password</string>
    <string name="requestPassword">Request the password</string>
    <string name="requestPasswordExplanation">(If the password isn`t requested, it is still stored in the system. If you don`t remember your password, change it before enabling this feature.)</string>

    <string name="fingerprint_authentication">Fingerprint authentication</string>
    <string name="fingerprint_explanation">(This feature works if the password is requested.)</string>
    <string name="toast_authentication_failed">Authentication failed, please try again</string>
    <string name="toast_error">Error:</string>
    <string name="toast_help">Help:</string>
    <string name="toast_authentication_not_supported">Your device doesn`t support fingerprint authentication</string>
    <string name="toast_authentication_permission">Please provide the fingerprint permission</string>
    <string name="toast_authentication_settings">Please check lockscreen settings on your device</string>

    <string name="design">Design</string>
    <string name="darkMode">Dark mode</string>
    <string name="followSystem">Follow system</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="colorTheme">Color theme</string>
    <string name="themeSelection">Theme selection</string>
    <string name="toastThemeSelected">Theme selected:</string>
    <string name="maroonColor">Maroon</string>
    <string name="emeraldColor">Emerald</string>
    <string name="lightGreenColor">Light green</string>
    <string name="blackColor">Black</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="newNote">New note</string>
    <string name="titleAdding">Note title</string>
    <string name="subtitleAdding">Text of the note</string>
    <string name="deadline">Deadline</string>
    <string name="toastNoteIsSaved">Note saved</string>
    <string name="toastNoteIsEmpty">Note is empty, enter the text</string>
    <string name="toastNoteDeleted">Note deleted</string>
    <string name="toastCancelDeletion">Cancel deletion</string>
    <string name="deletingNote">Do you want to delete the note:</string>
    <string name="yes">Yes</string>
    <string name="not">Not</string>
    <string name="editingNote">Editing the note</string>
    <string name="addNote">Add a note</string>
    <string name="share">Share</string>
    <string name="toastNoApp">No app to send</string>
    <string name="toastChooseApp">Choose app to send</string>
    <string name="add_item">add item</string>

    <string name="search">Search</string>
    <string name="search_notes">Search notes</string>
    <string name="sorting_notes">Sorting notes</string>
    <string name="by_default">by default</string>
    <string name="by_update">by update date</string>
    <string name="alphabetically">alphabetically</string>
    <string name="toast_notes_sorted">The notes are sorted</string>
</resources>