<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="7dp"
        android:paddingStart="17dp"
        android:text="@string/safety"
        android:textStyle="bold"
        android:textColor="?android:colorAccent"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/requestPasswordSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="17dp"
        android:paddingTop="15dp"
        android:paddingBottom="7dp"
        android:background="@drawable/view"
        android:text="@string/requestPassword"
        android:textSize="18sp"
        android:textColor="?attr/colorControlNormal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="17dp"
        android:paddingBottom="15dp"
        android:text="@string/requestPasswordExplanation"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/changePasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="17dp"
        android:paddingVertical="15dp"
        android:background="@drawable/view"
        android:text="@string/changePassword"
        android:textSize="18sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/fingerprintSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="17dp"
        android:paddingTop="15dp"
        android:paddingBottom="7dp"
        android:background="@drawable/view"
        android:text="@string/fingerprint_authentication"
        android:textSize="18sp"
        android:textColor="?attr/colorControlNormal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="17dp"
        android:paddingBottom="15dp"
        android:text="@string/fingerprint_explanation"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="7dp"
        android:paddingStart="17dp"
        android:text="@string/design"
        android:textStyle="bold"
        android:textColor="?android:colorAccent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/darkModeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="17dp"
        android:paddingVertical="15dp"
        android:background="@drawable/view"
        android:text="@string/darkMode"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/colorThemeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="17dp"
        android:paddingVertical="15dp"
        android:background="@drawable/view"
        android:text="@string/colorTheme"
        android:textSize="18sp" />

</LinearLayout>