<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_sort"
        android:title="@string/sorting_notes"
        android:icon="@drawable/ic_baseline_sort_24"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="collapseActionView"/>

</menu>