<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.AddingNewNoteActivity">

    <item
        android:id="@+id/action_deadline"
        android:title="@string/deadline"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_colors"
        android:title="@string/background_color"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_baseline_check_24"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

</menu>