<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PasswordActivity">

    <TextView
        android:id="@+id/enterPinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterPinTxt"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/enterPinText"
        app:layout_constraintStart_toStartOf="@+id/enterPinText"
        app:layout_constraintTop_toBottomOf="@+id/enterPinText">

        <ImageView
            android:id="@+id/pinFirstImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="25sp"
            app:srcCompat="@drawable/ic_circle_grey" />

        <ImageView
            android:id="@+id/pinSecondImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="25sp"
            app:layout_constraintStart_toEndOf="@+id/pinFirstImage"
            app:layout_constraintTop_toTopOf="@+id/pinFirstImage"
            app:srcCompat="@drawable/ic_circle_grey" />

        <ImageView
            android:id="@+id/pinThirdImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="25sp"
            app:layout_constraintStart_toEndOf="@+id/pinSecondImage"
            app:layout_constraintTop_toTopOf="@+id/pinSecondImage"
            app:srcCompat="@drawable/ic_circle_grey" />

        <ImageView
            android:id="@+id/pinFourthImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toEndOf="@+id/pinThirdImage"
            app:layout_constraintTop_toTopOf="@+id/pinThirdImage"
            app:srcCompat="@drawable/ic_circle_grey" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30sp"
        app:layout_constraintEnd_toEndOf="@+id/enterPinText"
        app:layout_constraintStart_toStartOf="@+id/enterPinText"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/one"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="20sp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textSize="20sp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textSize="20sp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textSize="20sp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textSize="20sp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="20sp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_u2190"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>