<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddingNewNoteActivity">

    <ScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/deadlineLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:visibility="gone">

                <CheckBox
                    android:id="@+id/deadlineCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:paddingStart="3dp"
                    android:text="@string/deadline"
                    android:textSize="17sp"
                    tools:ignore="RtlSymmetry" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal"
                    tools:ignore="RtlSymmetry">

                    <EditText
                        android:id="@+id/deadlineEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="9"
                        android:inputType="date"
                        android:textSize="16.5sp" />

                    <ImageButton
                        android:id="@+id/deadlineCalendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="setTime"
                        app:srcCompat="@drawable/ic_baseline_calendar_24"
                        tools:ignore="UsingOnClickInXml" />

                </LinearLayout>

            </RelativeLayout>

            <EditText
                android:id="@+id/titleAdding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/titleAdding"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/todoListAdding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/addItemTodo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:paddingStart="25dp"
                android:visibility="gone"
                tools:ignore="RtlSymmetry">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_baseline_add_gray_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/add_item"
                    android:textColor="@color/grayDark"
                    android:textSize="16.5sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/subtitleAdding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:hint="@string/subtitleAdding" />

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/addTodo"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/check_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>